# MacroToolbox

./: .gitignore  CLAUDE.md  MEMORY.md  dev.ps1  package-lock.json  package.json  todo.md
.github/workflows/: release.yml
changelog/: v1.0.3.md  v1.0.4.md  v1.0.5.md  v1.0.6.md  v1.1.0.md  v1.2.0.md  v1.3.0.md  v1.4.0.md  v1.5.0.md  v1.6.0.md  v1.6.1.md  v1.6.2.md  v1.6.3.md  v1.6.4.md  v1.6.5.md  v1.6.6.md  v1.6.7.md  v1.6.8.md  v2.0.0.md  v2.1.0.md  v3.0.0.md  v3.0.1.md  v3.0.2.md  v3.0.3.md  v3.0.4.md  v3.0.5.md  v3.0.6.md  v3.1.0.md  v3.2.0.md  v3.2.1.md  v3.2.2.md  v3.2.3.md  v3.2.4.md
releases/v1.0.2/: Hotkey Manager_0.1.0_x64_en-US.msi  Hotkey Manager_1.0.2_x64_en-US.msi
releases/v1.0.3/: Hotkey Manager_1.0.3_x64_en-US.msi
releases/v1.0.4/: Hotkey Manager_1.0.4_x64_en-US.msi
releases/v1.0.5/: Hotkey Manager_1.0.5_x64_en-US.msi
releases/v1.0.6/: Hotkey Manager_1.0.6_x64_en-US.msi
scripts/: package-release.ps1
src/: App.css  App.tsx  OverlayApp.tsx  api.ts  main.tsx  overlay.css  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: ahk.rs  config.rs  lib.rs  main.rs  scripts.rs
src-tauri/windows/: hooks.nsh
