[package]
name = "hotkey-manager"
version = "1.6.1"
description = "Hotkey Manager"
authors = ["Facundo Fierro"]
edition = "2021"

[lib]
name = "hotkey_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
tokio = { version = "1", features = ["rt", "net", "io-util"] }
reqwest = { version = "0.12", default-features = false, features = ["default-tls"] }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser", "psapi", "processthreadsapi", "handleapi", "winnt", "tlhelp32"] }
